results/SVCOMP/conversational/log-BugTestGen119-2024_03_09_04_02_07.txt
import java.util.Random;

public class BugTestGen119 {
    //@ ensures \result == (tmp.equals("true") || tmp.equals("false"));
    public static boolean main(String[] args) {
        boolean booleanValue = new Random().nextBoolean();

        String tmp = String.valueOf(booleanValue);
        if (booleanValue) return tmp.equals("true");
        else return tmp.equals("false");
    }
}
/home/max/Documents/JMLGPT/tmp/BugTestGen119.java:4: error: cannot find symbol
    //@ ensures \result == (tmp.equals("true") || tmp.equals("false"));
                            ^
  symbol:   variable tmp
  location: class BugTestGen119
/home/max/Documents/JMLGPT/tmp/BugTestGen119.java:4: error: cannot find symbol
    //@ ensures \result == (tmp.equals("true") || tmp.equals("false"));
                                                  ^
  symbol:   variable tmp
  location: class BugTestGen119
2 errors

import java.util.Random;

public class BugTestGen119 {
    //@ ensures \result == (String.valueOf(booleanValue).equals("true") || String.valueOf(booleanValue).equals("false"));
    public static boolean main(String[] args) {
        boolean booleanValue = new Random().nextBoolean();

        String tmp = String.valueOf(booleanValue);
        if (booleanValue) return tmp.equals("true");
        else return tmp.equals("false");
    }
}
/home/max/Documents/JMLGPT/tmp/BugTestGen119.java:4: error: cannot find symbol
    //@ ensures \result == (String.valueOf(booleanValue).equals("true") || String.valueOf(booleanValue).equals("false"));
                                           ^
  symbol:   variable booleanValue
  location: class BugTestGen119
/home/max/Documents/JMLGPT/tmp/BugTestGen119.java:4: error: cannot find symbol
    //@ ensures \result == (String.valueOf(booleanValue).equals("true") || String.valueOf(booleanValue).equals("false"));
                                                                                          ^
  symbol:   variable booleanValue
  location: class BugTestGen119
2 errors

import java.util.Random;

public class BugTestGen119 {
    //@ ensures \result == (String.valueOf(booleanValue).equals("true") || String.valueOf(booleanValue).equals("false"));
    public static boolean main(String[] args) {
        boolean booleanValue = new Random().nextBoolean();

        String tmp = String.valueOf(booleanValue);
        if (booleanValue) return tmp.equals("true");
        else return tmp.equals("false");
    }
}
/home/max/Documents/JMLGPT/tmp/BugTestGen119.java:4: error: cannot find symbol
    //@ ensures \result == (String.valueOf(booleanValue).equals("true") || String.valueOf(booleanValue).equals("false"));
                                           ^
  symbol:   variable booleanValue
  location: class BugTestGen119
/home/max/Documents/JMLGPT/tmp/BugTestGen119.java:4: error: cannot find symbol
    //@ ensures \result == (String.valueOf(booleanValue).equals("true") || String.valueOf(booleanValue).equals("false"));
                                                                                          ^
  symbol:   variable booleanValue
  location: class BugTestGen119
2 errors

import java.util.Random;

public class BugTestGen119 {
    //@ ensures \result == (String.valueOf(\result).equals("true") || String.valueOf(\result).equals("false"));
    public static boolean main(String[] args) {
        boolean booleanValue = new Random().nextBoolean();

        String tmp = String.valueOf(booleanValue);
        if (booleanValue) return tmp.equals("true");
        else return tmp.equals("false");
    }
}

